--- a/app/views/todolist/new.html.erb
+++ b/app/views/todolist/new.html.erb
@@ -2,13 +2,13 @@
 
 <%= form_with scope: :todolist, url: todolist_index_path , local: true do |form| %>
  
-<% if @todolist.errors.any? %>
+<% if @todo.errors.any? %>
   <div id="error_explanation">
     <h2>
-      <%= pluralize(@todolist.errors.count, "error") %> too short
+      <%= pluralize(@todo.errors.count, "error") %> too short
     </h2>
     <ul>
-      <% @todolist.errors.full_messages.each do |msg| %>
+      <% @todo.errors.full_messages.each do |msg| %>
         <li>
           <%= msg %>
         </li>
